2012-05-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Runstat: optimize missing value handling (speedup)
	* Runstat: OpenMP parallelization over parameter nts

2012-05-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* input: changed time axis to RELATIVE

2012-05-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.5.5
	* Version 1.5.5 released

2012-05-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Ensstat3: nvars undefined (bug fix)

2012-05-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* remap_bilin: using fabs(src_lats[n]) for distance-weighted average (big fix) [report: Renate Brokopf]
	* remap_bilic: using fabs(src_lats[n]) for distance-weighted average (big fix)

2012-04-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* grid.c::gridCurvilinearToRegular: bug fix [report: Ag Stevens]
	* remaplib: changed warning message for bilinear/bicubic interpolation

2012-04-17  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Yseasstat: changed timestamp of DJF season to last timestep of February

2012-04-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* ml2pl: added support for GRIB2 parameter names [Bug #2252]

2012-03-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pipeInqVlist: changed init of time_to_wait [Bug #2133]

2012-03-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* replace: removed debug output [report: K. Houchi]

2012-03-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* eca_rr1: missing value not set correctly (bug fix) [report: Hans-Juergen Panitz]
	* ecacore: fix all missing values

2012-02-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* geopotheight: added support for WMO code table

2012-02-06  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* New module: Yhourarith (yhouradd, yhoursub, yhourmul, yhourdiv) [request: Beate Gayer]

2012-02-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mergetime: added env. SKIP_SAME_TIME to skip all double entries of the same timestamp [request: K. Houchi]