@@ -99,10 +99,19 @@ void *Runstat(void *argument)
   datetime_t *datetime;
   int taxisID1, taxisID2;
   int calendar;
+  int runstat_nomiss = 0;
   int runstat_date = DATE_MIDDLE;
   char *envstr;
 
   cdoInitialize(argument);
+
+  envstr = getenv("RUNSTAT_NOMISS");
+  if ( envstr )
+    {
+      char *endptr;
+      int envval = (int) strtol(envstr, &endptr, 10);
+      if ( envval == 1 ) runstat_nomiss = 1;
+    }
 
   envstr = getenv("RUNSTAT_DATE");
   if ( envstr )
@@ -165,14 +174,16 @@ void *Runstat(void *argument)
 
   datetime = (datetime_t *) malloc((ndates+1)*sizeof(datetime_t));
   vars1 = (field_t ***) malloc((ndates+1)*sizeof(field_t **));
-  samp1 = (field_t ***) malloc((ndates+1)*sizeof(field_t **));
+  if ( !runstat_nomiss )
+    samp1 = (field_t ***) malloc((ndates+1)*sizeof(field_t **));
   if ( operfunc == func_std || operfunc == func_var )
     vars2 = (field_t ***) malloc((ndates+1)*sizeof(field_t **));
 
   for ( its = 0; its < ndates; its++ )
     {
       vars1[its] = (field_t **) malloc(nvars*sizeof(field_t *));
-      samp1[its] = (field_t **) malloc(nvars*sizeof(field_t *));
+      if ( !runstat_nomiss )
+	samp1[its] = (field_t **) malloc(nvars*sizeof(field_t *));
       if ( operfunc == func_std || operfunc == func_var )
 	vars2[its] = (field_t **) malloc(nvars*sizeof(field_t *));
 
@@ -184,7 +195,8 @@ void *Runstat(void *argument)
 	  missval  = vlistInqVarMissval(vlistID1, varID);
 
 	  vars1[its][varID] = (field_t *)  malloc(nlevel*sizeof(field_t));
-	  samp1[its][varID] = (field_t *)  malloc(nlevel*sizeof(field_t));
+	  if ( !runstat_nomiss )
+	    samp1[its][varID] = (field_t *)  malloc(nlevel*sizeof(field_t));
 	  if ( operfunc == func_std || operfunc == func_var )
 	    vars2[its][varID] = (field_t *)  malloc(nlevel*sizeof(field_t));
 
@@ -194,10 +206,14 @@ void *Runstat(void *argument)
 	      vars1[its][varID][levelID].nmiss   = 0;
 	      vars1[its][varID][levelID].missval = missval;
 	      vars1[its][varID][levelID].ptr     = (double *) malloc(gridsize*sizeof(double));
-	      samp1[its][varID][levelID].grid    = gridID;
-	      samp1[its][varID][levelID].nmiss   = 0;
-	      samp1[its][varID][levelID].missval = missval;
-	      samp1[its][varID][levelID].ptr     = (double *) malloc(gridsize*sizeof(double));
+	      if ( !runstat_nomiss )
+		{
+		  samp1[its][varID][levelID].grid    = gridID;
+		  samp1[its][varID][levelID].nmiss   = 0;
+		  samp1[its][varID][levelID].missval = missval;
+		  samp1[its][varID][levelID].ptr     = (double *) malloc(gridsize*sizeof(double));
+		}
+
 	      if ( operfunc == func_std || operfunc == func_var )
 		{
 		  vars2[its][varID][levelID].grid    = gridID;
@@ -234,26 +250,31 @@ void *Runstat(void *argument)
 	  streamReadRecord(streamID1, vars1[tsID][varID][levelID].ptr, &nmiss);
 	  vars1[tsID][varID][levelID].nmiss = nmiss;
 
-	  gridsize = gridInqSize(vars1[0][varID][levelID].grid);
-	  missval  = vars1[0][varID][levelID].missval;
+	  if ( runstat_nomiss && nmiss > 0 ) cdoAbort("Missing values supported swichted off!");
 
-	  for ( i = 0; i < gridsize; i++ )
-	    if ( DBL_IS_EQUAL(vars1[tsID][varID][levelID].ptr[i], missval) )
-	      imask[i] = 0;
-	    else
-	      imask[i] = 1;
+	  if ( !runstat_nomiss )
+	    {
+	      gridsize = gridInqSize(vars1[0][varID][levelID].grid);
+	      missval  = vars1[0][varID][levelID].missval;
 
-	  for ( i = 0; i < gridsize; i++ )
-	    samp1[tsID][varID][levelID].ptr[i] = (double) imask[i];
+	      for ( i = 0; i < gridsize; i++ )
+		if ( DBL_IS_EQUAL(vars1[tsID][varID][levelID].ptr[i], missval) )
+		  imask[i] = 0;
+		else
+		  imask[i] = 1;
+
+	      for ( i = 0; i < gridsize; i++ )
+		samp1[tsID][varID][levelID].ptr[i] = (double) imask[i];
 
 #if defined (_OPENMP)
 #pragma omp parallel for default(shared) private(i, inp)
 #endif
-	  for ( inp = 0; inp < tsID; inp++ )
-	    {
-	      double *ptr = samp1[inp][varID][levelID].ptr;
-	      for ( i = 0; i < gridsize; i++ )
-		if ( imask[i] > 0 ) ptr[i]++;
+	      for ( inp = 0; inp < tsID; inp++ )
+		{
+		  double *ptr = samp1[inp][varID][levelID].ptr;
+		  for ( i = 0; i < gridsize; i++ )
+		    if ( imask[i] > 0 ) ptr[i]++;
+		}
 	    }
 
 	  if ( operfunc == func_std || operfunc == func_var )
@@ -291,7 +312,7 @@ void *Runstat(void *argument)
 	    nlevel = zaxisInqSize(vlistInqVarZaxis(vlistID1, varID));
 	    for ( levelID = 0; levelID < nlevel; levelID++ )
 	      {
-		if ( samp1[0][varID][levelID].ptr == NULL )
+		if ( runstat_nomiss )
 		  farcmul(&vars1[0][varID][levelID], 1.0/ndates);
 		else
 		  fardiv(&vars1[0][varID][levelID], samp1[0][varID][levelID]);
@@ -304,7 +325,7 @@ void *Runstat(void *argument)
 	    nlevel = zaxisInqSize(vlistInqVarZaxis(vlistID1, varID));
 	    for ( levelID = 0; levelID < nlevel; levelID++ )
 	      {
-		if ( samp1[0][varID][levelID].ptr == NULL )
+		if ( runstat_nomiss )
 		  {
 		    if ( operfunc == func_std )
 		      farcstd(&vars1[0][varID][levelID], vars2[0][varID][levelID], 1.0/ndates);
@@ -356,7 +377,8 @@ void *Runstat(void *argument)
 
       datetime[ndates] = datetime[0];
       vars1[ndates] = vars1[0];
-      samp1[ndates] = samp1[0];
+      if ( !runstat_nomiss )
+	samp1[ndates] = samp1[0];
       if ( operfunc == func_std || operfunc == func_var )
         vars2[ndates] = vars2[0];
 
@@ -364,7 +386,8 @@ void *Runstat(void *argument)
 	{
 	  datetime[inp] = datetime[inp+1];
 	  vars1[inp] = vars1[inp+1];
-	  samp1[inp] = samp1[inp+1];
+	  if ( !runstat_nomiss )
+	    samp1[inp] = samp1[inp+1];
 	  if ( operfunc == func_std || operfunc == func_var )
 	    vars2[inp] = vars2[inp+1];
 	}
@@ -382,26 +405,31 @@ void *Runstat(void *argument)
 	  streamReadRecord(streamID1, vars1[ndates-1][varID][levelID].ptr, &nmiss);
 	  vars1[ndates-1][varID][levelID].nmiss = nmiss;
 
-	  gridsize = gridInqSize(vars1[0][varID][levelID].grid);
-	  missval  = vars1[0][varID][levelID].missval;
+	  if ( runstat_nomiss && nmiss > 0 ) cdoAbort("Missing values supported swichted off!");
 
-	  for ( i = 0; i < gridsize; i++ )
-	    if ( DBL_IS_EQUAL(vars1[ndates-1][varID][levelID].ptr[i], missval) )
-	      imask[i] = 0;
-	    else
-	      imask[i] = 1;
+	  if ( !runstat_nomiss )
+	    {
+	      gridsize = gridInqSize(vars1[0][varID][levelID].grid);
+	      missval  = vars1[0][varID][levelID].missval;
 
-	  for ( i = 0; i < gridsize; i++ )
-	    samp1[ndates-1][varID][levelID].ptr[i] = (double) imask[i];
+	      for ( i = 0; i < gridsize; i++ )
+		if ( DBL_IS_EQUAL(vars1[ndates-1][varID][levelID].ptr[i], missval) )
+		  imask[i] = 0;
+		else
+		  imask[i] = 1;
+
+	      for ( i = 0; i < gridsize; i++ )
+		samp1[ndates-1][varID][levelID].ptr[i] = (double) imask[i];
 
 #if defined (_OPENMP)
 #pragma omp parallel for default(shared) private(i, inp)
 #endif
-	  for ( inp = 0; inp < ndates-1; inp++ )
-	    {
-	      double *ptr = samp1[inp][varID][levelID].ptr;
-	      for ( i = 0; i < gridsize; i++ )
-		if ( imask[i] > 0 ) ptr[i]++;
+	      for ( inp = 0; inp < ndates-1; inp++ )
+		{
+		  double *ptr = samp1[inp][varID][levelID].ptr;
+		  for ( i = 0; i < gridsize; i++ )
+		    if ( imask[i] > 0 ) ptr[i]++;
+		}
 	    }
 
 	  if ( operfunc == func_std || operfunc == func_var )
@@ -439,23 +467,23 @@ void *Runstat(void *argument)
 	  for ( levelID = 0; levelID < nlevel; levelID++ )
 	    {
 	      free(vars1[its][varID][levelID].ptr);
-	      if ( samp1[its][varID][levelID].ptr ) free(samp1[its][varID][levelID].ptr);
+	      if ( !runstat_nomiss ) free(samp1[its][varID][levelID].ptr);
 	      if ( operfunc == func_std || operfunc == func_var ) free(vars2[its][varID][levelID].ptr);
 	    }
 
 	  free(vars1[its][varID]);
-	  free(samp1[its][varID]);
+	  if ( !runstat_nomiss ) free(samp1[its][varID]);
 	  if ( operfunc == func_std || operfunc == func_var ) free(vars2[its][varID]);
 	}
 
       free(vars1[its]);
-      free(samp1[its]);
+      if ( !runstat_nomiss ) free(samp1[its]);
       if ( operfunc == func_std || operfunc == func_var ) free(vars2[its]);
     }
 
   free(datetime);
   free(vars1);
-  free(samp1);
+  if ( !runstat_nomiss ) free(samp1);
   if ( operfunc == func_std || operfunc == func_var ) free(vars2);
 
   if ( recVarID   ) free(recVarID);
