@@ -2,6 +2,7 @@
 
 	* Runstat: optimize missing value handling (speedup)
 	* Runstat: OpenMP parallelization over parameter nts
+	* Runstat: added env. RUNSTAT_NOMISS
 
 2012-05-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
